source/tests/errors/function_already_declared.apex
function first()
    return 0

function first()
    return 0